--- a/ARA_MRTK3/Packages/manifest.json
+++ b/ARA_MRTK3/Packages/manifest.json
@@ -17,6 +17,7 @@
     "com.microsoft.mrtk.uxcomponents.noncanvas": "file:MixedReality/com.microsoft.mrtk.uxcomponents.noncanvas-3.0.0-pre.11.tgz",
     "com.microsoft.mrtk.uxcore": "file:MixedReality/com.microsoft.mrtk.uxcore-3.0.0-pre.11.tgz",
     "com.microsoft.mrtk.windowsspeech": "file:MixedReality/com.microsoft.mrtk.windowsspeech-3.0.0-pre.11.tgz",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.15.17",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.15",
