fix(sqlite)-add_sqlite_support

--- a/Ara.Domain.Test/Ara.Domain.Test.csproj
+++ b/Ara.Domain.Test/Ara.Domain.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
@@ -21,6 +21,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ara.Domain\Ara.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Mono.Data.Sqlite">
+      <HintPath>..\ARA_MRTK3\Assets\Plugins\Mono.Data.Sqlite.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
